Correct spacing for grading

--- a/my_style.css
+++ b/my_style.css
@@ -38,6 +38,10 @@ img{
     margin: 10;
 }
 
+.fancy{
+    font-family: cursive;
+}
+
 footer{
     padding: 1cm;
     color:grey;
